fixed button positioning on card, bottom aligned

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@ header {
 
 main {
   max-width: 1000px;
-  margin-bottom: 80px;
+  margin-bottom: 130px;
+
 }
 
 footer {
