--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -1,5 +1,10 @@
 .RecipeInstructions {
   text-align: left;
+  padding: 10px;
+}
+
+.RecipeIntroduction {
+  padding: 10px;
 }
 
 .RecipeImgContainer {
